fix: wire NarrativeEventEngine/QuestEngine beans, fix empty-spec bug, fix Map<Object> vs Map<String> mismatch, fix OptionSpec field names
Problems fixed:
1. DomainConfig: add @Bean for NarrativeContentLoader, NarrativeEventEngine,
   NarrativeQuestEngine — they were injected everywhere but never declared
2. NarrativeBootstrap: after loading, reload specs into the already-created engines
   (engines were always empty because specs were loaded into ContentLoader only)
3. ExecutePlayerActionService + EndDayService: context map was Map<String,Object>
   but NarrativeEventEngine.evaluate() expects Map<String,String> — convert values
   to String before passing
4. Both services: OptionSpec accessor was o.optionId()/o.text() — correct fields
   are o.id()/o.labelRu() matching OptionSpec record definition
5. Both services: NarrativeEventTriggeredEvent now takes List<EventOptionView>
   not List<Map> — construct EventOptionView properly